--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Gostkowska Photography",
-  "name": "Gostkowska Photography",
+  "short_name": "Sobolewska Photography",
+  "name": "Sobolewska Photography",
   "icons": [
     {
       "src": "favicon.ico",
