--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gostkowska_photography",
+  "name": "sobolewska_photography",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "axios": "0.25.0",
-    "lottie-react": "^2.4.0",
     "react": "18.2.0",
     "react-cookie": "4.1.1",
     "react-device-detect": "2.2.3",
