--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-cookie": "4.1.1",
     "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
