--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "2.3.0",
     "styled-components": "5.3.1",
@@ -22,7 +22,7 @@
     "web-vitals": "1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
